[GREEN] implement kebun search improvement